--- a/Mock Project Work/project_client.css
+++ b/Mock Project Work/project_client.css
@@ -10,7 +10,7 @@
 
 li {
     display: inline;
-  }
+}
 
 nav{
     background-color: black;
@@ -20,9 +20,9 @@ nav{
 }
 
 a{
-        color: white;
-        text-decoration: none;
-    }
+    color: white;
+    text-decoration: none;
+}
 
 .navbar-brand{
     color: white;
@@ -30,20 +30,35 @@ a{
 
 .grid{
     display: grid;
-    grid-template-columns: repeat(1fr,3);
-    grid-template-rows: repeat(1fr,2);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    width: 68%;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 1rem;
 }
 
 .rev{
-    padding: 30px;
-    border-radius: 2px;
-    box-shadow: 5px 10px 18px #888;
+    padding: 1rem;
+    border-radius: 2px; 
+    box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
     display: flex;
-    gap: 25px;
+    gap: 1rem;
+    height: 16rem;
 }
-
-.image-round{
-    border-radius: 90%;
-    
+.text-content {
+    margin-top: auto;
+    margin-bottom: auto;
 }
-
+.img1 {
+    border-radius: 100%;
+    width: 10rem;
+    height: 10rem;
+    overflow: hidden;
+    margin: auto 0;
+    background-color: rebeccapurple;
+    display: flex;
+    align-items: center;
+}
+.image-round {
+    transform: scale(1.4) translateX(-2rem);
+}
